--- a/docs/manuscript/lexces-silicosis-predict.bib
+++ b/docs/manuscript/lexces-silicosis-predict.bib
@@ -67,4 +67,21 @@ title = {{Corrected ROC analysis for misclassified binary outcomes}},
 volume = {36},
 year = {2017}
 }
+@article{Meijer2011,
+abstract = {Objectives: To evaluate the prevalence of HRCT findings in construction workers previously surveyed by chest radiographs classified according to ILO guidelines. To examine the association between HRCT findings and exposure to quartz containing dust, and lung function. Methods: The study comprised a questionnaire, dynamic and static lung function measurements, single-breath CO diffusion capacity, chest radiographs and HRCT in 79 individuals. Certified 'B' readers coded radiographs according to the ILO classification. HRCT scans were read according to an international classification system. A qualitative exposure index for cumulative respiratory quartz on a 10-point scale was used. Results: Agreement between HRCT readers was good ($\kappa${\textgreater}0.60), except for irregular opacities ($\kappa$=0.23). In ILO category 0/0, 8{\%} HRCT round, 22{\%} irregular and/or linear opacities and 41{\%} HRCT emphysema was found. HRCT round opacities was associated with high cumulative quartz exposure (OR 7.1; 95{\%} CI 1.3 to 37.8). Emphysema was associated with smoking (OR 10.1; 95{\%} CI 1.2 to 84.2) and showed a reduction in TL,CO,sb. HRCT round opacities was not associated with lung function. Current smoking was negatively associated with FEV1/FVC ratio and positively with RV/TLC ratio, and showed a reduction in TL,CO,sb (13.4{\%}), adjusted for different HRCT findings. Conclusions: Low grade silicosis cannot be excluded in workers with normal chest radiographs (ILO 0/0). In relatively highly exposed construction workers, a sevenfold increased risk of simple (nodular) silicosis was found. Emphysema on HRCT was associated with current or former smokers, but not with exposure, and contributed to reduced diffusion capacity. Airflow limitation was mainly determined by current smoking and was not associated with simple (nodular) silicosis.},
+author = {Meijer, E. and {Tjoe Nij}, E. and Kraus, T. and van der Zee, J S and van Delden, O and van Leeuwen, M and Lammers, J. W. and Heederik, D.},
+doi = {10.1136/oem.2010.055616},
+file = {:E$\backslash$:/OneDrive - Universiteit Utrecht/Lexces/Papers/Prediction models/Lung diseases/542.full.pdf:pdf},
+issn = {1351-0711},
+journal = {Occupational and Environmental Medicine},
+mendeley-groups = {Lexces/Silicosis},
+month = {jul},
+number = {7},
+pages = {542--546},
+pmid = {21355064},
+title = {{Pneumoconiosis and emphysema in construction workers: results of HRCT and lung function findings}},
+url = {https://oem.bmj.com/lookup/doi/10.1136/oem.2010.055616},
+volume = {68},
+year = {2011}
+}
 
